src/main/java/example/parser/MyLanguageParser.java
// This is a generated file. Not intended for manual editing.
package example.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static example.psi.MyLanguageTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class MyLanguageParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  /* ********************************************************** */
  // multiplicative_expression ((PLUS | MINUS | AMPERSAND | AMP_ENTITY) multiplicative_expression)*
  static boolean additive_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = multiplicative_expression(b, l + 1);
    r = r && additive_expression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ((PLUS | MINUS | AMPERSAND | AMP_ENTITY) multiplicative_expression)*
  private static boolean additive_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!additive_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "additive_expression_1", c)) break;
    }
    return true;
  }

  // (PLUS | MINUS | AMPERSAND | AMP_ENTITY) multiplicative_expression
  private static boolean additive_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = additive_expression_1_0_0(b, l + 1);
    r = r && multiplicative_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // PLUS | MINUS | AMPERSAND | AMP_ENTITY
  private static boolean additive_expression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "additive_expression_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, AMPERSAND);
    if (!r) r = consumeToken(b, AMP_ENTITY);
    return r;
  }

  /* ********************************************************** */
  // expression (COMMA expression)*
  public static boolean argument_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT_LIST, "<argument list>");
    r = expression(b, l + 1);
    r = r && argument_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA expression)*
  private static boolean argument_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!argument_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "argument_list_1", c)) break;
    }
    return true;
  }

  // COMMA expression
  private static boolean argument_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACE (comment | statement)* RBRACE COLON*
  public static boolean block_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_statement")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && block_statement_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    r = r && block_statement_3(b, l + 1);
    exit_section_(b, m, BLOCK_STATEMENT, r);
    return r;
  }

  // (comment | statement)*
  private static boolean block_statement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_statement_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!block_statement_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_statement_1", c)) break;
    }
    return true;
  }

  // comment | statement
  private static boolean block_statement_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_statement_1_0")) return false;
    boolean r;
    r = comment(b, l + 1);
    if (!r) r = statement(b, l + 1);
    return r;
  }

  // COLON*
  private static boolean block_statement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_statement_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, COLON)) break;
      if (!empty_element_parsed_guard_(b, "block_statement_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // TRUE_KEYWORD | FALSE_KEYWORD
  public static boolean boolean_constant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_constant")) return false;
    if (!nextTokenIs(b, "<boolean constant>", FALSE_KEYWORD, TRUE_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_CONSTANT, "<boolean constant>");
    r = consumeToken(b, TRUE_KEYWORD);
    if (!r) r = consumeToken(b, FALSE_KEYWORD);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SINGLE_QUOTED_STRING | DOUBLE_QUOTED_STRING |  // 字符串形式的键
  //   IDENTIFIER
  public static boolean callback_key(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_key")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CALLBACK_KEY, "<callback key>");
    r = consumeToken(b, SINGLE_QUOTED_STRING);
    if (!r) r = consumeToken(b, DOUBLE_QUOTED_STRING);
    if (!r) r = consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LBRACE callback_property (COMMA callback_property)* RBRACE
  public static boolean callback_object(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_object")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && callback_property(b, l + 1);
    r = r && callback_object_2(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, CALLBACK_OBJECT, r);
    return r;
  }

  // (COMMA callback_property)*
  private static boolean callback_object_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_object_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!callback_object_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "callback_object_2", c)) break;
    }
    return true;
  }

  // COMMA callback_property
  private static boolean callback_object_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_object_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && callback_property(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // callback_key COLON code_block_literal
  public static boolean callback_property(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "callback_property")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CALLBACK_PROPERTY, "<callback property>");
    r = callback_key(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && code_block_literal(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LBRACE (comment | statement)* RBRACE
  public static boolean code_block_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "code_block_literal")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && code_block_literal_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, CODE_BLOCK_LITERAL, r);
    return r;
  }

  // (comment | statement)*
  private static boolean code_block_literal_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "code_block_literal_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!code_block_literal_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "code_block_literal_1", c)) break;
    }
    return true;
  }

  // comment | statement
  private static boolean code_block_literal_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "code_block_literal_1_0")) return false;
    boolean r;
    r = comment(b, l + 1);
    if (!r) r = statement(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // LINE_COMMENT | BLOCK_COMMENT
  public static boolean comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comment")) return false;
    if (!nextTokenIs(b, "<comment>", BLOCK_COMMENT, LINE_COMMENT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMENT, "<comment>");
    r = consumeToken(b, LINE_COMMENT);
    if (!r) r = consumeToken(b, BLOCK_COMMENT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // additive_expression ((LESS_EQUAL | GREATER_EQUAL | EQUAL_EQUAL | NOT_EQUAL | LESS | GREATER | NOT_EQUAL_ALT | LT_ENTITY | GT_ENTITY) additive_expression)*
  static boolean comparison_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_expression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = additive_expression(b, l + 1);
    r = r && comparison_expression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ((LESS_EQUAL | GREATER_EQUAL | EQUAL_EQUAL | NOT_EQUAL | LESS | GREATER | NOT_EQUAL_ALT | LT_ENTITY | GT_ENTITY) additive_expression)*
  private static boolean comparison_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!comparison_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "comparison_expression_1", c)) break;
    }
    return true;
  }

  // (LESS_EQUAL | GREATER_EQUAL | EQUAL_EQUAL | NOT_EQUAL | LESS | GREATER | NOT_EQUAL_ALT | LT_ENTITY | GT_ENTITY) additive_expression
  private static boolean comparison_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = comparison_expression_1_0_0(b, l + 1);
    r = r && additive_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LESS_EQUAL | GREATER_EQUAL | EQUAL_EQUAL | NOT_EQUAL | LESS | GREATER | NOT_EQUAL_ALT | LT_ENTITY | GT_ENTITY
  private static boolean comparison_expression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_expression_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, LESS_EQUAL);
    if (!r) r = consumeToken(b, GREATER_EQUAL);
    if (!r) r = consumeToken(b, EQUAL_EQUAL);
    if (!r) r = consumeToken(b, NOT_EQUAL);
    if (!r) r = consumeToken(b, LESS);
    if (!r) r = consumeToken(b, GREATER);
    if (!r) r = consumeToken(b, NOT_EQUAL_ALT);
    if (!r) r = consumeToken(b, LT_ENTITY);
    if (!r) r = consumeToken(b, GT_ENTITY);
    return r;
  }

  /* ********************************************************** */
  // expression COMMA expression                                              // 必需：args[0]消息代码, args[1]消息文本
  //   (COMMA message_params_expression                                        // 可选：args[2]消息参数
  //     (COMMA expression                                                     // 可选：args[3]样式(OK,YES_NO,YES_NO_CANCEL)
  //       (COMMA callback_object)?                                            // 可选：args[4]回调函数对象
  //     )?
  //   )?
  public static boolean confirm_msg_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "confirm_msg_args")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONFIRM_MSG_ARGS, "<confirm msg args>");
    r = expression(b, l + 1);
    r = r && consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    r = r && confirm_msg_args_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (COMMA message_params_expression                                        // 可选：args[2]消息参数
  //     (COMMA expression                                                     // 可选：args[3]样式(OK,YES_NO,YES_NO_CANCEL)
  //       (COMMA callback_object)?                                            // 可选：args[4]回调函数对象
  //     )?
  //   )?
  private static boolean confirm_msg_args_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "confirm_msg_args_3")) return false;
    confirm_msg_args_3_0(b, l + 1);
    return true;
  }

  // COMMA message_params_expression                                        // 可选：args[2]消息参数
  //     (COMMA expression                                                     // 可选：args[3]样式(OK,YES_NO,YES_NO_CANCEL)
  //       (COMMA callback_object)?                                            // 可选：args[4]回调函数对象
  //     )?
  private static boolean confirm_msg_args_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "confirm_msg_args_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && message_params_expression(b, l + 1);
    r = r && confirm_msg_args_3_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA expression                                                     // 可选：args[3]样式(OK,YES_NO,YES_NO_CANCEL)
  //       (COMMA callback_object)?                                            // 可选：args[4]回调函数对象
  //     )?
  private static boolean confirm_msg_args_3_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "confirm_msg_args_3_0_2")) return false;
    confirm_msg_args_3_0_2_0(b, l + 1);
    return true;
  }

  // COMMA expression                                                     // 可选：args[3]样式(OK,YES_NO,YES_NO_CANCEL)
  //       (COMMA callback_object)?
  private static boolean confirm_msg_args_3_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "confirm_msg_args_3_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1);
    r = r && confirm_msg_args_3_0_2_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA callback_object)?
  private static boolean confirm_msg_args_3_0_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "confirm_msg_args_3_0_2_0_2")) return false;
    confirm_msg_args_3_0_2_0_2_0(b, l + 1);
    return true;
  }

  // COMMA callback_object
  private static boolean confirm_msg_args_3_0_2_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "confirm_msg_args_3_0_2_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && callback_object(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CONFIRM_MSG LPAREN confirm_msg_args RPAREN
  public static boolean confirm_msg_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "confirm_msg_call")) return false;
    if (!nextTokenIs(b, CONFIRM_MSG)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, CONFIRM_MSG, LPAREN);
    r = r && confirm_msg_args(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, CONFIRM_MSG_CALL, r);
    return r;
  }

  /* ********************************************************** */
  // SINGLE_QUOTED_STRING
  //   | DOUBLE_QUOTED_STRING
  //   | numeric_constant
  public static boolean constant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT, "<constant>");
    r = consumeToken(b, SINGLE_QUOTED_STRING);
    if (!r) r = consumeToken(b, DOUBLE_QUOTED_STRING);
    if (!r) r = numeric_constant(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // LBRACE LBRACE expression RBRACE RBRACE
  public static boolean double_brace_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "double_brace_expression")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LBRACE, LBRACE);
    r = r && expression(b, l + 1);
    r = r && consumeTokens(b, 0, RBRACE, RBRACE);
    exit_section_(b, m, DOUBLE_BRACE_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // logical_or_expression
  public static boolean expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION, "<expression>");
    r = logical_or_expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expression_statement (SEMICOLON expression_statement)*
  public static boolean expression_sequence(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_sequence")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_SEQUENCE, "<expression sequence>");
    r = expression_statement(b, l + 1);
    r = r && expression_sequence_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (SEMICOLON expression_statement)*
  private static boolean expression_sequence_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_sequence_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression_sequence_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression_sequence_1", c)) break;
    }
    return true;
  }

  // SEMICOLON expression_statement
  private static boolean expression_sequence_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_sequence_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SEMICOLON);
    r = r && expression_statement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expression
  public static boolean expression_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_statement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_STATEMENT, "<expression statement>");
    r = expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ((PARENT_KEYWORD | CONTAINER_KEYWORD) DOT)?
  //   (
  //     confirm_msg_call |          // 特殊处理 ConfirmMsg
  //     regular_function_call       // 普通函数调用
  //   )
  public static boolean function_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_CALL, "<function call>");
    r = function_call_0(b, l + 1);
    r = r && function_call_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ((PARENT_KEYWORD | CONTAINER_KEYWORD) DOT)?
  private static boolean function_call_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call_0")) return false;
    function_call_0_0(b, l + 1);
    return true;
  }

  // (PARENT_KEYWORD | CONTAINER_KEYWORD) DOT
  private static boolean function_call_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = function_call_0_0_0(b, l + 1);
    r = r && consumeToken(b, DOT);
    exit_section_(b, m, null, r);
    return r;
  }

  // PARENT_KEYWORD | CONTAINER_KEYWORD
  private static boolean function_call_0_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call_0_0_0")) return false;
    boolean r;
    r = consumeToken(b, PARENT_KEYWORD);
    if (!r) r = consumeToken(b, CONTAINER_KEYWORD);
    return r;
  }

  // confirm_msg_call |          // 特殊处理 ConfirmMsg
  //     regular_function_call
  private static boolean function_call_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_call_1")) return false;
    boolean r;
    r = confirm_msg_call(b, l + 1);
    if (!r) r = regular_function_call(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // IF_KEYWORD LPAREN expression RPAREN statement_block (ELSE_KEYWORD statement_block)?
  public static boolean if_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "if_statement")) return false;
    if (!nextTokenIs(b, IF_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IF_KEYWORD, LPAREN);
    r = r && expression(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && statement_block(b, l + 1);
    r = r && if_statement_5(b, l + 1);
    exit_section_(b, m, IF_STATEMENT, r);
    return r;
  }

  // (ELSE_KEYWORD statement_block)?
  private static boolean if_statement_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "if_statement_5")) return false;
    if_statement_5_0(b, l + 1);
    return true;
  }

  // ELSE_KEYWORD statement_block
  private static boolean if_statement_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "if_statement_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ELSE_KEYWORD);
    r = r && statement_block(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IIF_KEYWORD
  public static boolean iif_function_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "iif_function_call")) return false;
    if (!nextTokenIs(b, IIF_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IIF_KEYWORD);
    exit_section_(b, m, IIF_FUNCTION_CALL, r);
    return r;
  }

  /* ********************************************************** */
  // JAVA_PATH_IDENTIFIER
  public static boolean java_method_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "java_method_call")) return false;
    if (!nextTokenIs(b, JAVA_PATH_IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, JAVA_PATH_IDENTIFIER);
    exit_section_(b, m, JAVA_METHOD_CALL, r);
    return r;
  }

  /* ********************************************************** */
  // comparison_expression ((AND_OP|AND_OP_ENTITY) comparison_expression)*
  static boolean logical_and_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "logical_and_expression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = comparison_expression(b, l + 1);
    r = r && logical_and_expression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ((AND_OP|AND_OP_ENTITY) comparison_expression)*
  private static boolean logical_and_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "logical_and_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!logical_and_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "logical_and_expression_1", c)) break;
    }
    return true;
  }

  // (AND_OP|AND_OP_ENTITY) comparison_expression
  private static boolean logical_and_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "logical_and_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = logical_and_expression_1_0_0(b, l + 1);
    r = r && comparison_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // AND_OP|AND_OP_ENTITY
  private static boolean logical_and_expression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "logical_and_expression_1_0_0")) return false;
    boolean r;
    r = consumeToken(b, AND_OP);
    if (!r) r = consumeToken(b, AND_OP_ENTITY);
    return r;
  }

  /* ********************************************************** */
  // logical_and_expression (OR_OP logical_and_expression)*
  static boolean logical_or_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "logical_or_expression")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = logical_and_expression(b, l + 1);
    r = r && logical_or_expression_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (OR_OP logical_and_expression)*
  private static boolean logical_or_expression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "logical_or_expression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!logical_or_expression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "logical_or_expression_1", c)) break;
    }
    return true;
  }

  // OR_OP logical_and_expression
  private static boolean logical_or_expression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "logical_or_expression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OR_OP);
    r = r && logical_and_expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // MACRO_IDENTIFIER
  public static boolean macro_call_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "macro_call_expression")) return false;
    if (!nextTokenIs(b, MACRO_IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MACRO_IDENTIFIER);
    exit_section_(b, m, MACRO_CALL_EXPRESSION, r);
    return r;
  }
